testsuite/tests/rename/should_fail/T23740b.stderr

T23740b.hs:7:6: error: [GHC-45510]
    • Term variable ‘id’ cannot be used here
        (term variables cannot be promoted)
    • In the type signature: f :: id -> Int
